CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(KalmanFilter)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
ADD_LIBRARY(KalmanFilter SHARED Kalman.cpp)
SET_TARGET_PROPERTIES(KalmanFilter PROPERTIES VERSION "1.0.0" SOVERSION "1")
INSTALL(TARGETS KalmanFilter LIBRARY DESTINATION lib)
INSTALL(FILES Kalman.h DESTINATION include)
